--- a/style.css
+++ b/style.css
@@ -7,9 +7,33 @@
     display: none;
     margin-left: 15px;
 }
-
+.container {
+    width: 1200px;
+    /* BAD */
+}
 .dropdown-toggle::after{
     display: none;
+}
+/* Navbar default (not fixed) */
+#mainNavbar {
+    position: relative;
+    width: 100%;
+    transition: all 0.3s ease;
+    z-index: 1000;
+}
+
+#mainNavbar.fixed-top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(58, 84, 177, 1);
+    box-shadow: 0 2px 6px rgba(207, 206, 206, 0.2);
+    padding: 0.5rem 1rem;
+}
+
+body.scrolled-padding {
+    padding-top: 70px;
 }
 .banner
 {
@@ -18,7 +42,7 @@
     background-size: cover;
     background-position: center center;
     width: 100%;
-    height: 95vh;
+    height: 115vh;
 }
 .abt-ban
 {
@@ -27,12 +51,12 @@
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 80vh;
+    height: 100vh;
 }
 .abt-con
 {
     width: 100%;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 .banner-title
@@ -56,7 +80,7 @@
     text-align: center;
     width: 100%;
     height: 90vh;
-    margin-top: 200px;
+    margin-top: 160px;
 }
 .logo-marquee {
     overflow: hidden;
@@ -66,7 +90,7 @@
 .logo-track {
     display: inline-block;
     white-space: nowrap;
-    animation: scroll 60s linear infinite;
+    animation: scroll 30s linear infinite;
 }
 
 .logo-item {
@@ -82,7 +106,7 @@
 
 @keyframes scroll {
     from {
-        transform: translateX(100%);
+        transform: translateX(0%);
     }
 
     to {
@@ -145,7 +169,7 @@
 .card-head
 {
     font-weight: 700;
-    font-size: 2.8rem;
+    font-size: 2.5rem;
     line-height: 3.2rem;
 }
 .dotted-border {
@@ -165,7 +189,7 @@
     background-color: #fff;
     border-radius: 15px;
     padding: 30px;
-    height: 100%;
+    max-height: 100%;
     box-shadow: rgba(207, 207, 207, 0.24) 4px 3px 8px 5px;
 }
 
@@ -186,9 +210,10 @@
     background-color: transparent;
     border: none;
 }
+
 .accordion-button
 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     font-weight: 700;
     color: #222 !important;
 }
@@ -251,6 +276,9 @@
 {
     background-color: #f7f7f7;
     border: none;
+    height: 45px;
+        /* Set height */
+    padding: 8px 12px;
 }
 @media (max-width: 767px) {
     .accordion-button
@@ -346,7 +374,7 @@
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 40px 0;
+    padding: 0;
 }
 
 .timeline::after {
@@ -361,11 +389,10 @@
 }
 
 .timeline-item {
-    padding: 10px 40px;
+    padding: 5px 40px;
     position: relative;
     width: 50%;
     box-sizing: border-box;
-    margin-bottom: 30px;
 }
 
 .timeline-item::after {
@@ -401,7 +428,7 @@
 .content {
     padding: 25px;
     background-color: #e4effe;
-    border-radius: 8px;
+    border-radius: 25px;
     position: relative;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
 }
@@ -414,8 +441,8 @@
 
 .year-badge {
     display: inline-block;
-    font-weight: bold;
-    font-size: 1.1rem;
+    font-weight: 500;
+    font-size: 1rem;
     color: white;
     background-color: #4a90e2;
     padding: 5px 15px;
