--- a/style.css
+++ b/style.css
@@ -31,7 +31,13 @@
     box-shadow: 0 2px 6px rgba(207, 206, 206, 0.2);
     padding: 0.5rem 1rem;
 }
-
+img.img-fluid {
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
+    /* or cover if you want to fill */
+    display: block; }
+    
 body.scrolled-padding {
     padding-top: 70px;
 }
