--- a/style.css
+++ b/style.css
@@ -7,10 +7,7 @@
     display: none;
     margin-left: 15px;
 }
-.container {
-    width: 1200px;
-    /* BAD */
-}
+
 .dropdown-toggle::after{
     display: none;
 }
@@ -31,14 +28,7 @@
     box-shadow: 0 2px 6px rgba(207, 206, 206, 0.2);
     padding: 0.5rem 1rem;
 }
-img.img-fluid {
-    max-width: 100%;
-    height: auto;
-    object-fit: contain;
-    /* or cover if you want to fill */
-    display: block; }
-    
-body.scrolled-padding {
+.scrolled-padding {
     padding-top: 70px;
 }
 .banner
@@ -309,11 +299,31 @@ body.scrolled-padding {
         background-position: center;
         height: 70vh;
     }
+    .navbar-brand
+    {
+        margin-right: 2px;
+    }
+    .cus-img
+    {
+        max-width: 100%;
+        max-height: 250px;
+    }
+    .fs-4
+    {
+        font-size: 1.2rem !important;
+    }
+    .year-badge
+    {
+        top: -3px !important;
+    }
+    .hero-subtitle
+    {
+        font-size: 18px !important;
+    }
     .abt-ban
     {
         width: 100%;
-        height: 135
-        vh;
+        height: 100vh;
     }
     .ban-content
     {
