--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@
 .abt-con
 {
     width: 100%;
-    margin-top: 40px;
+    top: 40px;
+    position: relative;
 }
 
 .banner-title
@@ -76,7 +77,8 @@
     text-align: center;
     width: 100%;
     height: 90vh;
-    margin-top: 160px;
+    top: 160px;
+    position: relative;
 }
 .logo-marquee {
     overflow: hidden;
@@ -327,7 +329,7 @@
     }
     .ban-content
     {
-        margin-top: 50px;
+        top:50px;
     }
     .banner-title
     {
