--- a/style.css
+++ b/style.css
@@ -7,7 +7,16 @@
     display: none;
     margin-left: 15px;
 }
+.fade-up {
+    transform: translateY(50px);
+    transition: opacity 0.2s ease-out, transform 1.25s ease-out;
+    opacity: 0;
+}
 
+.fade-up.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
 .dropdown-toggle::after{
     display: none;
 }
@@ -48,7 +57,7 @@
     background-size: cover;
     background-position: center center;
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     position: relative;
 }
 .abt-ban
@@ -69,9 +78,9 @@
 
 .banner-title
 {
-    font-size: 5rem;
-    font-weight: 700;
-    line-height: 4.5rem;
+    font-size: 3.8rem;
+    font-weight: 800;
+    line-height: 3.5rem;
 }
 .nav-item .nav-link
 {
